[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/OpcionesVolumen.gd" type="Script" id=1]

[node name="OpcionesVolumen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRectBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.47451, 0.184314, 0.184314, 0.545098 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRectBackground"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRectBackground/CenterContainer"]
margin_left = 666.0
margin_top = 308.0
margin_right = 773.0
margin_bottom = 412.0
custom_constants/separation = 10

[node name="EtiquetaVolumen" type="Label" parent="ColorRectBackground/CenterContainer/VBoxContainer"]
margin_right = 107.0
margin_bottom = 14.0
text = "Control Volumen"

[node name="ControlSeparador" type="Label" parent="ColorRectBackground/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 24.0
margin_right = 107.0
margin_bottom = 38.0

[node name="HSliderVolumen" type="HSlider" parent="ColorRectBackground/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 107.0
margin_bottom = 64.0
rect_min_size = Vector2( 10, 10 )
max_value = 30.0

[node name="Control" type="Control" parent="ColorRectBackground/CenterContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 107.0
margin_bottom = 74.0

[node name="Volver" type="Button" parent="ColorRectBackground/CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 107.0
margin_bottom = 104.0
text = "Volver"

[connection signal="ready" from="." to="." method="_on_OpcionesVolumen_ready"]
[connection signal="value_changed" from="ColorRectBackground/CenterContainer/VBoxContainer/HSliderVolumen" to="." method="_on_HSliderVolumen_value_changed"]
[connection signal="pressed" from="ColorRectBackground/CenterContainer/VBoxContainer/Volver" to="." method="_on_Volver_pressed"]
